--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -30,7 +30,7 @@
     }
     @include media-mobile {
         font-size: 2.5rem;
-        line-height: 3.3rem
+        line-height: 3.3rem;
     }
 }
 
@@ -43,7 +43,8 @@
     @include media-mobile {
         font-size: 1.5rem;
         line-height: 2.5rem;
-        padding: 22px 0 0 0;
+        padding: 15px 0 0 0;
+        text-align: left;
     }
 }
 
