--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -23,6 +23,10 @@
         height: 248px;
         order: 1;
     }
+    @include media-mobile {
+        width: 100px;
+        height: 124px;
+    }
 }
 
 .contacts__title {
@@ -73,4 +77,7 @@
 
 .drop_img {
     margin-right: 50px;
+    @include media-mobile{
+        margin-right: 50px;
+    }
 }
