feat: add burger menu

--- a/src/sass/components/_service.scss
+++ b/src/sass/components/_service.scss
@@ -1,6 +1,7 @@
 .service {
     background-color: $color-background;
     padding: 0 0 133px 0;
+    overflow: hidden;
     @include media-tablet {
         padding: 60px 0 70px 0;
     }
