--- a/src/sass/base/_hamburger.scss
+++ b/src/sass/base/_hamburger.scss
@@ -14,6 +14,7 @@
     @include media-mobile {
         display: inline-block;
         margin-left: auto;
+        cursor: pointer;
     }
     &:before {
         content: "";
@@ -27,12 +28,64 @@
     }
 }
 
+.hamburger::before.active .hamburger::after.active {
+    opacity: 0;
+}
+
+
+
 .hamburger__line1 {
     @extend %hamburger-line;
     top: calc(33% - 1px);
 }
 
+.hamburger__line1.active {
+    transform: translateY(8px) rotate(45deg);
+}
+
 .hamburger__line2 {
     @extend %hamburger-line;
     top: calc(66% - 1px);
+}
+
+.hamburger__line2.active {
+    transform: translateY(-8px) rotate(-45deg);
+}
+
+.popup {
+    display: none;
+    @include media-mobile {
+        position: fixed;
+        top: 96px;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+        z-index: 100;
+        display: flex;
+        transition: 0.3s;
+    }
+}
+
+.popup.open {
+    @include media-mobile {
+        left: 0;
+    }
+}
+
+.popup .navigation {
+    @include media-mobile {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: start;
+        padding: 50px 0;
+        overflow: auto;
+    }
+}
+
+.popup .navigation>li>a:hover {
+    background-color: rgba(122, 82, 179, 0.1);
 }
