--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,6 +1,7 @@
 .contacts {
     background-color: $color-background;
     padding-top: 53px;
+    overflow: hidden;
     @include media-tablet {
         padding-top: 40px;
     }
@@ -58,6 +59,9 @@
 .drop__label {
     background-color: $color-drop-down;
     margin-top: 92px;
+    display: flex;
+    justify-content: space-between;
+    max-width: 450px;
     @include media-tablet {
         margin: 0;
     }
@@ -68,7 +72,7 @@
     color: $color-text;
     display: inline-block;
     padding: 5px 226px 5px 20px;
-    width: 384px;
+    flex-grow: 1;
     @include media-mobile {
         padding: 5px 76px 5px 20px;
         width: 234px;
@@ -76,7 +80,8 @@
 }
 
 .drop_img {
-    margin-right: 50px;
+
+    margin-right: 35px;
     @include media-mobile{
         margin-right: 50px;
     }
