--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -903,7 +903,7 @@ h5 {
   border-top-right-radius: 20px;
   height: 350px;
   width: 329px;
-  background-image: url("/src/img/service/card-image-1.png");
+  background-image: url("../img/service/card-image-1.png");
 }
 @media (max-width: 768px) {
   .card-image-1 {
@@ -914,7 +914,7 @@ h5 {
     border-top-right-radius: 20px;
     height: 350px;
     width: 280px;
-    background-image: url("/src/img/service-tablet/card-image-1.jpg");
+    background-image: url("../img/service-tablet/card-image-1.jpg");
   }
 }
 
@@ -926,7 +926,7 @@ h5 {
   border-top-right-radius: 20px;
   height: 350px;
   width: 329px;
-  background-image: url("/src/img/service/card-image-2.png");
+  background-image: url("../img/service/card-image-2.png");
 }
 @media (max-width: 768px) {
   .card-image-2 {
@@ -937,7 +937,7 @@ h5 {
     border-top-right-radius: 20px;
     height: 350px;
     width: 280px;
-    background-image: url("/src/img/service-tablet/card-image-2.jpg");
+    background-image: url("../img/service-tablet/card-image-2.jpg");
   }
 }
 
@@ -949,7 +949,7 @@ h5 {
   border-top-right-radius: 20px;
   height: 350px;
   width: 329px;
-  background-image: url("/src/img/service/card-image-3.png");
+  background-image: url("../img/service/card-image-3.png");
 }
 @media (max-width: 768px) {
   .card-image-3 {
@@ -960,7 +960,7 @@ h5 {
     border-top-right-radius: 20px;
     height: 350px;
     width: 280px;
-    background-image: url("/src/img/service-tablet/card-image-3.jpg");
+    background-image: url("../img/service-tablet/card-image-3.jpg");
   }
 }
 
@@ -972,7 +972,7 @@ h5 {
   border-top-right-radius: 20px;
   height: 350px;
   width: 329px;
-  background-image: url("/src/img/service/card-image-4.png");
+  background-image: url("../img/service/card-image-4.png");
 }
 @media (max-width: 768px) {
   .card-image-4 {
@@ -983,7 +983,7 @@ h5 {
     border-top-right-radius: 20px;
     height: 350px;
     width: 280px;
-    background-image: url("/src/img/service-tablet/card-image-4.jpg");
+    background-image: url("../img/service-tablet/card-image-4.jpg");
   }
 }
 
@@ -995,7 +995,7 @@ h5 {
   border-top-right-radius: 20px;
   height: 350px;
   width: 329px;
-  background-image: url("/src/img/service/card-image-5.png");
+  background-image: url("../img/service/card-image-5.png");
 }
 @media (max-width: 768px) {
   .card-image-5 {
@@ -1006,7 +1006,7 @@ h5 {
     border-top-right-radius: 20px;
     height: 350px;
     width: 280px;
-    background-image: url("/src/img/service-tablet/card-image-5.jpg");
+    background-image: url("../img/service-tablet/card-image-5.jpg");
   }
 }
 
@@ -1018,7 +1018,7 @@ h5 {
   border-top-right-radius: 20px;
   height: 350px;
   width: 329px;
-  background-image: url("/src/img/service/card-image-6.png");
+  background-image: url("../img/service/card-image-6.png");
 }
 @media (max-width: 768px) {
   .card-image-6 {
@@ -1029,7 +1029,7 @@ h5 {
     border-top-right-radius: 20px;
     height: 350px;
     width: 280px;
-    background-image: url("/src/img/service-tablet/card-image-6.jpg");
+    background-image: url("../img/service-tablet/card-image-6.jpg");
   }
 }
 
