--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,7 +1,6 @@
 .contacts {
     background-color: $color-background;
     padding-top: 53px;
-    overflow: hidden;
     @include media-tablet {
         padding-top: 40px;
     }
@@ -19,6 +18,8 @@
 }
 
 .contacts_img {
+    width: 400px;
+    height: 497px;
     @include media-tablet {
         width: 200px;
         height: 248px;
@@ -27,6 +28,21 @@
     @include media-mobile {
         width: 100px;
         height: 124px;
+    }
+}
+
+.contacts_img img{
+    max-width: 100%;
+    max-height: 497px;
+    @include media-tablet {
+        width: 200px;
+        height: 248px;
+        margin-left: 10px;
+    }
+    @include media-mobile {
+        width: 100px;
+        height: 124px;
+        margin-left: -1px;
     }
 }
 
@@ -43,7 +59,6 @@
         line-height: 33px;
         margin: 0 0 80px 0;
     }
-    
 }
 
 .drop-down {
@@ -61,9 +76,13 @@
     margin-top: 92px;
     display: flex;
     justify-content: space-between;
-    max-width: 450px;
+    width: calc(250px + (450 - 250) * ((100vw - 770px) / (1440 - 770)));
     @include media-tablet {
+        width: calc(350px + (450 - 350) * ((100vw - 440px) / (768 - 440)));
         margin: 0;
+    }
+    @include media-mobile {
+        width: calc(250px + (300 - 250) * ((100vw - 320px) / (380 - 320)));
     }
 }
 
@@ -71,7 +90,7 @@
     @include font (normal, 400, 2rem, 4rem);
     color: $color-text;
     display: inline-block;
-    padding: 5px 226px 5px 20px;
+    padding: 5px 0 5px 20px;
     flex-grow: 1;
     @include media-mobile {
         padding: 5px 76px 5px 20px;
@@ -80,9 +99,8 @@
 }
 
 .drop_img {
-
     margin-right: 35px;
     @include media-mobile{
-        margin-right: 50px;
+        margin-right: 20px;
     }
 }
