--- a/src/sass/components/_welcome.scss
+++ b/src/sass/components/_welcome.scss
@@ -1,27 +1,40 @@
 .welcome {
     background-color: $color-background;
-    padding: 50px 0 55px 0;
-    overflow: hidden;
+    padding: 50px 0 80px 0;
     @include media-tablet {
         padding: 40px 0 70px 0;
     }
     @include media-mobile {
-        padding: 24px 0;
+        padding: 20px 0;
     }
 }
 
 .welcome__wrapper {
     display: flex;
+    justify-content: space-between;
     @include media-tablet {
         flex-direction: row-reverse;
     }
 }
 
 .welcome__img {
-    margin-top: 20px;
+    width: 449px;
+    height: 407px;
     @include media-tablet {
         width: 280px;
         height: 254px;
+    }
+}
+
+.welcome__img img {
+    margin-top: 20px;
+    max-width: 100%;
+    min-width: 350px;
+    max-height: 407px;
+    @include media-tablet {
+        max-width: 100%;
+        min-width: 130px;
+        max-height: 254px;
         margin: 0;
     }
     @include media-mobile {
@@ -30,11 +43,14 @@
 }
 
 .welcome__body {
-    padding: 20px 0 0 224px;
+    padding: 20px 0 0 0px;
+    max-width: 549px;
     @include media-tablet {
-        padding: 0 42px 0 0;
+        padding: 0;
+        max-width: 346px;
     }
     @include media-mobile {
+        min-width: 315px;
         padding: 0;
     }
 }
@@ -58,7 +74,7 @@
         font-size: 1.6rem;
         line-height: 2.5rem;
         margin: 0;
-        padding: 30px 0;
+        padding: 30px 0 35px 5px;
     }
     @include media-mobile {
         padding: 20px 0 25px 0;
